<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Abit</string>
    <string name="about_app" translatable="false">A Bitmessage client for Android</string>
    <string name="title_message_detail" translatable="false">Message</string>
    <string name="title_subscription_detail" translatable="false">Subscription</string>
    <string name="title_chan_detail" translatable="false">Chan</string>
    <string name="title_identity_detail" translatable="false">Identity</string>
    <string name="title_contact_detail" translatable="false">Contact</string>
    <string name="bitmessage_full_node" translatable="false">Bitmessage Node</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="wifi_only" translatable="false">Wi-Fi only</string>
    <string name="wifi_only_summary" translatable="false">Don\'t connect to the mobile network</string>
    <string name="to" translatable="false">To</string>
    <string name="subject" translatable="false">Subject</string>
    <string name="manage_identity" translatable="false">Manage Identity</string>
    <string name="add_identity" translatable="false">Add Identity</string>
    <string name="add_identity_summary" translatable="false">Create new identity</string>
    <string name="create_identity_description" translatable="false">Create a new, random identity</string>
    <string name="import_identity_description" translatable="false">Import an existing identity from PyBitmessage or from an export</string>
    <string name="add_deterministic_address" translatable="false">Deterministic identity</string>
    <string name="add_deterministic_address_description" translatable="false">Create or recreate a deterministic identity</string>
    <string name="add_chan" translatable="false">Add Chan</string>
    <string name="add_chan_description" translatable="false">Create or join a Chan</string>
    <string name="title_activity_open_bitmessage_link" translatable="false">Import Contact</string>
    <string name="connection_info_1" translatable="false">Stream #%1$d: one connection</string>
    <string name="connection_info_n" tools:ignore="PluralsCandidate" translatable="false">Stream #%1$d: %2$d connections</string>
    <string name="label" translatable="false">Label</string>
    <string name="subscribe" translatable="false">Subscribe</string>
    <string name="do_import" translatable="false">Import</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="broadcast" translatable="false">Broadcast</string>
    <string name="n_new_messages" tools:ignore="PluralsCandidate" translatable="false">%d new messages</string>
    <string name="reply" translatable="false">Reply</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="mark_unread" translatable="false">Mark unread</string>
    <string name="archive" translatable="false">Archive</string>
    <string name="empty_trash" translatable="false">Empty Trash</string>
    <string name="stream_number" translatable="false">Stream #%d</string>
    <string name="trusted_node" translatable="false">Trusted node</string>
    <string name="trusted_node_summary" translatable="false">Use this node for synchronization</string>
    <string name="sync_timeout" translatable="false">Synchronization Timeout</string>
    <string name="sync_timeout_summary" translatable="false">Timeout in seconds</string>
    <string name="write_message" translatable="false">Write message</string>
    <string name="full_node" translatable="false">Full node</string>
    <string name="send" translatable="false">Send</string>
    <string name="connection_info_disconnected" translatable="false">Disconnected</string>
    <string name="connection_info_pending" translatable="false">Connecting…</string>
    <string name="proof_of_work_title" translatable="false">Proof of Work</string>
    <string name="proof_of_work_text_0" translatable="false">Doing work to send message</string>
    <string name="proof_of_work_text_n" translatable="false" tools:ignore="PluralsCandidate">Doing work to send message (%1$d queued)</string>
    <string name="error_invalid_sync_port" translatable="false">Invalid port in synchronization settings: %s</string>
    <string name="compose_body_hint" translatable="false">Write message</string>
    <string name="contacts_and_subscriptions" translatable="false">Contacts</string>
    <string name="subscribed" translatable="false">Subscribed</string>
    <string name="server_pow" translatable="false">Server POW</string>
    <string name="server_pow_summary" translatable="false">Trusted node does proof of work</string>
    <string name="full_node_warning" translatable="false">Running a full Bitmessage node uses a lot of traffic, which could be expensive on a mobile network. Are you sure you want to start a full node?</string>
    <string name="about" translatable="false">About Abit</string>
    <string name="about_summary" translatable="false">Open source dependencies.</string>
    <string name="title_activity_status" translatable="false">Debugging</string>
    <string name="status" translatable="false">Debugging</string>
    <string name="status_summary" translatable="false">Technical information</string>
    <string name="alias_default_identity" translatable="false">Me</string>
    <string name="pubkey_available" translatable="false">Public key available</string>
    <string name="pubkey_not_available" translatable="false">Public key not yet available</string>
    <string name="alt_qr_code" translatable="false">QR code</string>
    <string name="add_identity_warning" translatable="false">Having more identities will require more resources. If you are sure you want to add an identity, please select what exactly you want to do:</string>
    <string name="share" translatable="false">Share</string>
    <string name="delete_identity_warning" translatable="false">Are you sure you want to delete this identity? You won\'t be able to receive any messages sent to this address and can\'t undo this operation.</string>
    <string name="delete_contact_warning" translatable="false">Are you sure you want to delete this contact?</string>
    <string name="scan_qr_code" translatable="false">Scan QR code</string>
    <string name="create_contact" translatable="false">Create contact</string>
    <string name="full_node_description" translatable="false">You can\'t receive or send messages unless you start a full node. But be aware that this uses a lot of resources and internet traffic.

As an alternative you could configure a trusted node in the settings, but as of now you\'ll need to deploy your own.</string>
    <string name="address" translatable="false">Bitmessage Address</string>
    <string name="error_illegal_address" translatable="false">There might be a typo</string>
    <string name="export" translatable="false">Export</string>
    <string name="confirm_export" translatable="false">Do you really want to export your identity? The export will contain the unencrypted private keys.</string>
    <string name="compose_message" translatable="false">Compose</string>
    <string name="passphrase" translatable="false">Passphrase</string>
    <string name="help_out" translatable="false">Support Development</string>
    <string name="help_out_summary" translatable="false">Want to help out? Have a look here</string>
    <string name="help_out_link" translatable="false">https://dissem.github.io/Abit/helping-out</string>
    <string name="toast_long_running_operation" translatable="false">This may take a few minutes</string>
    <string name="toast_identity_created" translatable="false">Identity created</string>
    <string name="toast_identities_created" translatable="false">Identities created</string>
    <string name="toast_chan_created" translatable="false">Chan created</string>
    <string name="deterministic_address_warning" translatable="false">Be sure to remember those settings correctly when recreating a deterministic address.</string>
    <string name="number_of_identities" translatable="false">Number of identities to create</string>
    <string name="shorter" translatable="false">Search for shorter addresses</string>
    <string name="wif_string" translatable="false">WIF / contents of ‘keys.dat’</string>
    <string name="next" translatable="false">Continue</string>
    <string name="title_import_identity" translatable="false">Import Identity</string>
    <string name="open_file" translatable="false">Open File</string>
    <string name="error_loading_data" translatable="false">Error loading data</string>
    <string name="select_file_title" translatable="false">Select a File</string>
    <string name="select_identities_to_import" translatable="false">Please select the identities you want to import:</string>
    <string name="import_input_description" translatable="false">You can just paste the contents of an export or a ‘keys.dat’ file</string>
    <string name="full_node_stop" translatable="false">shutdown node</string>
    <string name="full_node_restart" translatable="false">restart node</string>
    <string name="use_mobile_network" translatable="false">Use mobile network</string>
    <string name="personal_message" translatable="false">Message</string>
    <string name="no_identity_warning" translatable="false">Please try again once an identity is available.</string>
    <string name="status_public_key" translatable="false">public key requested</string>
    <string name="status_sent_acknowledged" translatable="false">acknowledged</string>
    <string name="status_draft" translatable="false">draft</string>
    <string name="status_sent" translatable="false">sent</string>
    <string name="status_received" translatable="false">received</string>
    <string name="error_unsupported_encoding" translatable="false">Unsupported encoding ‘%s’, using ‘SIMPLE’ instead.</string>
    <string name="select_encoding_warning" translatable="false">‘EXTENDED’ is a new message format that\'s not widely supported yet but has some interesting features. To stay on the save side, select ‘SIMPLE’.</string>
    <string name="select_encoding_title" translatable="false">Select Message Encoding</string>
    <string name="cleanup" translatable="false">Cleanup</string>
    <string name="cleanup_summary" translatable="false">Remove outdated inventory entries</string>
    <string name="cleanup_notification_start" translatable="false">Cleanup started</string>
    <string name="cleanup_notification_end" translatable="false">Cleanup finished</string>
    <string name="wait_for_wifi" translatable="false">Wait for Wi-Fi</string>
    <string name="error_msg_recipient_missing" translatable="false">Please set a recipient</string>
    <string name="export_data" translatable="false">Export</string>
    <string name="export_data_summary" translatable="false">Export all messages and contacts (but not identities)</string>
    <string name="import_data" translatable="false">Import</string>
    <string name="import_data_summary" translatable="false">Import messages and contacts (but not identities)</string>
    <string name="request_acknowledgements" translatable="false">Request acknowledgements</string>
    <string name="request_acknowledgements_summary" translatable="false">Acknowledges allow making sure a message was received, but require additional time to send</string>
    <string name="got_it" translatable="false">Got it</string>
    <string name="select_encoding" translatable="false">Select encoding</string>
    <string name="from" translatable="false">From</string>
    <string name="invalid_wif_file" translatable="false">The file could not be processed</string>
    <string name="inbox" translatable="false">Inbox</string>
    <string name="outbox" translatable="false">Outbox</string>
    <string name="draft" translatable="false">Drafts</string>
    <string name="sent" translatable="false">Sent</string>
</resources>